Add Readme and bump to version 0.2.0

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,8 +1,8 @@
 [package]
 name = "wort"
-version = "0.1.0"
+version = "0.2.0"
 authors = ["Monte Johnston <johnston.monte@gmail.com>"]
-description = "This is a command line utility to find the English translation of German Words. Use the -a option to include all occurances of the word – in other definitions or in examples."
+description = "This is a command line utility to find the English translation of German Words."
 
 [dependencies]
 regex = "0.2"
